addons/istio/demo/istio-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  labels:
    name: hello-ingress
spec:
  rules:
  - host: hello
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello
            port:
              number: 8000
